--- a/forex/templates/product-specification.html
+++ b/forex/templates/product-specification.html
@@ -71,24 +71,47 @@
         <button class="tab__link  stocks" onclick="openTab(event, 'Stocks')">Stocks</button>
       </div>
       <div id="Forex" class="tab__content  tab__content--forex">
-        <div class="tab__origin">
-          <h3>Forex</h3>
-          <p>Foreign exchange or Forex is one of the largest and most liquid markets with over 5 trillion dollars traded daily. A trader can trade currencies against each other and based on the changing values of currencies over time he can make a profit or a loss. Exchange rates are defined by the market forces of supply and demand and are affected by geopolitical and economic events around the globe. With Forex24:</p>
-          <ul>
-            <li>You can trade 60+ currency pairs: majors, minors and exotics</li>
-            <li>You get direct access to the forex market 24 hours a day, 5 days a week</li>
-            <li>Leverage up to 400:1</li>
-            <li>Low spreads and No re-quotes</li>
-            <li>No hidden fees</li>
-          </ul>
-        </div>
+        <h3>Forex</h3>
+        <p>Foreign exchange or Forex is one of the largest and most liquid markets with over 5 trillion dollars traded daily. A trader can trade currencies against each other and based on the changing values of currencies over time he can make a profit or a loss. Exchange rates are defined by the market forces of supply and demand and are affected by geopolitical and economic events around the globe. With Forex24:</p>
+        <ul>
+          <li>You can trade 60+ currency pairs: majors, minors and exotics</li>
+          <li>You get direct access to the forex market 24 hours a day, 5 days a week</li>
+          <li>Leverage up to 400:1</li>
+          <li>Low spreads and No re-quotes</li>
+          <li>No hidden fees</li>
+        </ul>
+        <table class="product-specification__forex">
+          <tr>
+            <th>Currency Pairs Symbols<br>FX MAJORS</th>
+            <th>Name<br>FX MAJORS</th>
+          </tr>
+          <tr>
+            <td>AUD/JPY</td>
+            <td>Australian Dollar Vs Japanese Yen</td>
+          </tr>
+          <tr>
+            <td>AUD/USD</td>
+            <td>Australian Dollar Vs US Dollar</td>
+          </tr>
+          <tr>
+            <td>CHF/JPY</td>
+            <td>Canadian Dollar Vs Japanese Yen</td>
+          </tr>
+          <tr>
+            <td>EUR/CAD</td>
+            <td>Euro Vs Canadian Dollar</td>
+          </tr>
+          <tr>
+            <td>EUR/CHF</td>
+            <td>Euro Vs Swiss Franc</td>
+          </tr>
+          <!-- Five elements -->
+        </table>
       </div>
       <div id="Commodities" class="tab__content  tab__content--commodities">
-        <div class="tab__originc">
-          <h3>Commodities</h3>
-          <p>Commodity markets have had a major impact on nations and people throughout history. Currently there are about 50 major commodity markets worldwide that facilitate trading of approximately 100 raw or primary products. There are different categories of commodities, all supported by the same basic economic principles: lower supply equals higher prices and vice versa.</p> 
-          <p>At Forex24 you can trade up to 10 CFDs on Commodities such as Crude Oil, Natural Gas, Corn, Rice and Sugar with very favourable terms.</p>
-        </div>
+        <h3>Commodities</h3>
+        <p>Commodity markets have had a major impact on nations and people throughout history. Currently there are about 50 major commodity markets worldwide that facilitate trading of approximately 100 raw or primary products. There are different categories of commodities, all supported by the same basic economic principles: lower supply equals higher prices and vice versa.</p> 
+        <p>At Forex24 you can trade up to 10 CFDs on Commodities such as Crude Oil, Natural Gas, Corn, Rice and Sugar with very favourable terms.</p>
       </div>
       <div id="Precious Metals" class="tab__content  tab__content--metals">
         <h3>Precious Metals</h3>
