--- a/forex/templates/account-comparison.html
+++ b/forex/templates/account-comparison.html
@@ -72,7 +72,7 @@
         <button class="tab__link  commodities" onclick="openTab(event, 'Commodities')">Commoditiews</button>
         <button class="tab__link  metals" onclick="openTab(event, 'Precious Metals')">Precious Metals</button>
         <button class="tab__link  bonds" onclick="openTab(event, 'Bonds')">Bonds</button>
-        <button class="tab__link  indices" onclick="openTab(event, 'Indices')">Indices</button>
+        <button class="tab__link  indices-c" onclick="openTab(event, 'Indices')">Indices</button>
         <button class="tab__link  stocks" onclick="openTab(event, 'Stocks')">Stocks</button>
       </div>
       <div id="Forex" class="tab__content  tab__content--forex">
@@ -189,7 +189,7 @@
         <h3>Bonds</h3>
         <p>Lorem ipsum dolor sit amet.</p>
       </div>
-      <div id="Indices" class="tab__content  tab__content--indices">
+      <div id="Indices" class="tab__content  tab__content--indices-c">
         <h3>Indices</h3>
         <p>Lorem ipsum dolor sit amet.</p>
       </div>
