--- a/forex/templates/product-specification.html
+++ b/forex/templates/product-specification.html
@@ -62,7 +62,7 @@
   <section class="product-specification">
     <div class="container">
       <div class="tab">
-        <button class="tab__link  forex" onclick="openTab(event, 'Forex')">Forex</button>
+        <button class="tab__link  forex active" onclick="openTab(event, 'Forex')" autofocus>Forex</button>
         <button class="tab__link  commodities" onclick="openTab(event, 'Commodities')">Commodities</button>
         <button class="tab__link  metals" onclick="openTab(event, 'Precious Metals')">Precious Metals</button>
         <button class="tab__link  bonds" onclick="openTab(event, 'Bonds')">Bonds</button>
@@ -80,7 +80,7 @@
           <li>Low spreads and No re-quotes</li>
           <li>No hidden fees</li>
         </ul>
-        <table class="product-specification__forex">
+        <table class="product-specification__table  product-specification__table--forex">
           <tr>
             <th>Currency Pairs Symbols<br>FX MAJORS</th>
             <th>Name<br>FX MAJORS</th>
@@ -112,31 +112,201 @@
         <h3>Commodities</h3>
         <p>Commodity markets have had a major impact on nations and people throughout history. Currently there are about 50 major commodity markets worldwide that facilitate trading of approximately 100 raw or primary products. There are different categories of commodities, all supported by the same basic economic principles: lower supply equals higher prices and vice versa.</p> 
         <p>At Forex24 you can trade up to 10 CFDs on Commodities such as Crude Oil, Natural Gas, Corn, Rice and Sugar with very favourable terms.</p>
+        <table class="product-specification__table  product-specification__table--commodities">
+          <tr>
+            <th>Symbol</th>
+            <th>Description</th>
+            <th>Explanation</th>
+          </tr>
+          <tr>
+            <td>NGAS</td>
+            <td>US Natural Gas / USD</td>
+            <td>Natural gas is one of the cleanest and safest energy supplies available in the world. Natural gas is in greatest demand during the winter season to meet commercial and domestic heating needs. It is one of the world’s most appealing globally traded commodities.</td>
+          </tr>
+          <tr>
+            <td>WTI Crude Oil</td>
+            <td>Spot US WTI Oil /USD</td>
+            <td>West Texas Intermediate (WTI), also known as Texas light sweet, is a grade of crude oil used as a benchmark in oil pricing. This grade is described as light because of its relatively low density, and sweet because of its low sulfur content.</td>
+          </tr>
+          <tr>
+            <td>Brend Crude Oil</td>
+            <td>Spot Brend Crude Oil/ USD</td>
+            <td>Brent Crude is a major trading classification of sweet light crude oil that serves as a major benchmark price for purchases of oil worldwide. Brent is the leading global price benchmark for Atlantic basin crude oils. It is used to price two thirds of the world’s internationally tradedcrude oil supplies.</td>
+          </tr>
+          <tr>
+            <td>London Gasoil</td>
+            <td>London Gasoil / USD</td>
+            <td>Gasoil is a group of petroleum distillation products having boiling points between kerosene and lubricating oil.</td>
+          </tr>
+          <tr>
+            <td>US Cocoa</td>
+            <td>US Cocoa/USD</td>
+            <td>The cocoa bean, also cacao bean or simply cocoa or cacao, is the dried and fully fermented fatty seed of Theobroma cacao, from which cocoa solids and cocoa butter are extracted. They are the basis of chocolate, as well as many Mesoamerican foods such as mole and tejate.</td>
+          </tr>
+          <!-- Five elements -->
+        </table>
       </div>
       <div id="Precious Metals" class="tab__content  tab__content--metals">
         <h3>Precious Metals</h3>
         <p>Metals are physical commodities and they have always played an important role in history and will continue to be valued. Metals such as Gold and Silver have been recognized as valuable assets and have always been a very popular choice of investing. Precious metals, especially Gold has always been referred to as ‘Safe Heaven’ in times of economic uncertainty.</p>
         <p>Forex24 offers investors, who do not want to face economic turbulence, access to three types of metals: Gold, Silver and Palladium.</p>
+        <table class="product-specification__table  product-specification__table--metals">
+          <tr>
+            <th>Symbol</th>
+            <th>Description</th>
+            <th>Explanation</th>
+          </tr>
+          <tr>
+            <td>XAU/USD</td>
+            <td>GOLD USD</td>
+            <td>The Gold price is quoted as US Dollar per Troy Ounce. Since 1919 the most common benchmark for the price of gold has been the London gold fixing, a twice-daily telephone meeting of representatives from five bullion-trading firms of the London bullion market. Gold is traded continuously throughout the world based on the intra-day spot price, derived from over-the-counter gold-trading markets around the world (code “XAU”).</td>
+          </tr>
+          <tr>
+            <td>XAG/USD</td>
+            <td>SILVER USD</td>
+            <td>The price of silver is driven by speculation and supply and demand; mainly by large traders or investors, short selling, industrial, consumer and commercial demand, and to hedge against financial stress. Compared to gold, the price of silver is notoriously volatile. This is because of lower market liquidity, and demand fluctuations between industrial and store of value uses. At times this can cause wide ranging valuations in the market creating volatility.</td>
+          </tr>
+          <tr>
+            <td>Palladium</td>
+            <td>Palladium/ USD</td>
+            <td>Palladium is a chemical element with symbol Pd and atomic number 46. It is a rare and lustrous silvery-white metal discovered in 1803 by William Hyde Wollaston. He named it after the asteroid Pallas, which was itself named after the epithet of the Greek goddess Athena, acquired by her when she slew Pallas. Palladium, platinum, rhodium, ruthenium, iridium and osmium form a group of elements referred to as the platinum group metals (PGMs). These have similar chemical properties, but palladium has the lowest melting point and is the least dense of them.</td>
+          </tr>
+        </table>
       </div>
       <div id="Bonds" class="tab__content  tab__content--bonds">
         <h3>Bonds</h3>
         <p>Bonds are one of the oldest types of financial instruments in the world and their value is often defined by global events. Trading bonds for the long term is considered a conservative investment. Bonds offer an outstanding opportunity to differentiate your portfolio and hedge against risk. For many investors, it makes sense to have at least part of their portfolio invested in bonds.</p>
         <p>Forex24 clients have the access to trade 2 bond futures through contract for difference.</p>
+        <table class="product-specification__table  product-specification__table--bonds">
+          <tr>
+            <th>Symbol</th>
+            <th>Description</th>
+            <th>Explanation</th>
+          </tr>
+          <tr>
+            <td>Bund</td>
+            <td>Bund/EUR</td>
+            <td>A 10-year treasury note is a debt obligation issued by the United States government that matures in 10 years. A 10-year Treasury note pays interest at a fixed rate once every six months and pays the face value to the holder at maturity. An advantage of investing in 10-year Treasury notes, and other federal government securities, is that the interest payments are exempt from state and local income tax. However, they are still taxable at the federal level.</td>
+          </tr>
+          <tr>
+            <td>US 10 Yr Tnote</td>
+            <td>US 10 Yr Tnote/USD</td>
+            <td>A 10-year treasury note is a debt obligation issued by the United States government that matures in 10 years. A 10-year Treasury note pays interest at a fixed rate once every six months and pays the face value to the holder at maturity. An advantage of investing in 10-year Treasury notes, and other federal government securities, is that the interest payments are exempt from state and local income tax. However, they are still taxable at the federal level.</td>
+          </tr>
+        </table>
       </div>
       <div id="Indices Cash" class="tab__content  tab__content--indices-c">
         <h3>Indices</h3>
         <p>An index is a statistical representation of an equity market through a basket of stocks. An index measures the value of a group of stocks and therefore investors can invest on indices that represent specific markets.</p>
         <p>With Forex24 you can trade more than 10 of the world’s most prolific indices covering Asia, North America and Europe, including the renowned Dow Jones Industrial Average (DJIA) which is extremely popular with traders worldwide.</p>
+        <table class="product-specification__table  product-specification__table--indices-c">
+          <tr>
+            <th>Symbol</th>
+            <th>Description</th>
+            <th>Explanation</th>
+          </tr>
+          <tr>
+            <td>China A50 Index</td>
+            <td>China A50/CNY</td>
+            <td>FTSE China A50 Index (was known as FTSE–Xinhua China A50 Index) is a stock market index by FTSE Group (FTSE–Xinhua joint venture until 2010), the components were chose from Shanghai Stock Exchange and Shenzhen Stock Exchange, which issue A-share. B-share (share for foreigners) were not included.</td>
+          </tr>
+          <tr>
+            <td>Hong Kong 50 Index</td>
+            <td>Hang Seng/HKD</td>
+            <td>The Hang Seng Index is a freefloat-adjusted market capitalization-weighted stock market index in Hong Kong. It is used to record and monitor daily changes of the largest companies of the Hong Kong stock market and is the main indicator of the overall market performance in Hong Kong.</td>
+          </tr>
+          <tr>
+            <td>India 50 Index</td>
+            <td>NIFTY/USD</td>
+            <td>The NIFTY 50 index is National Stock Exchange of India’s benchmark stock market index for Indian equity market, launched on 21st April 1996. Nifty is owned and managed by India Index Services and Products ), which is a wholly owned subsidiary of the NSE Strategic Investment Corporation Limited.</td>
+          </tr>
+          <tr>
+            <td>Singapore Blue Chip Index</td>
+            <td>FTSE/SGD</td>
+            <td>The FTSE Straits Times Index (STI) is a capitalisation-weighted stock market indexthat is regarded as the benchmark index for the Singapore stock market. It tracks the performance of the top 30 companies listed on the Singapore Exchange.</td>
+          </tr>
+          <tr>
+            <td>US Dollar Index</td>
+            <td>US Dollar Index/USD</td>
+            <td>The U.S. Dollar Index is an index of the value of the United States dollar relative to a basket of foreign currencies, often referred to as a basket of U.S. trade partners’ currencies.</td>
+          </tr>
+        </table>
       </div>
       <div id="Indices Future" class="tab__content  tab__content--indices-f">
         <h3>Indices</h3>
         <p>An index is a statistical representation of an equity market through a basket of stocks. An index measures the value of a group of stocks and therefore investors can invest on indices that represent specific markets.</p>
         <p>With Forex24 you can trade more than 10 of the world’s most prolific indices covering Asia, North America and Europe, including the renowned Dow Jones Industrial Average (DJIA) which is extremely popular with traders worldwide.</p>
+        <table class="product-specification__table  product-specification__table--indices-f">
+          <tr>
+            <th>Symbol</th>
+            <th>Description</th>
+            <th>Explanation</th>
+          </tr>
+          <tr>
+            <td>Austalian 200 Index</td>
+            <td>S&P/ASX 200 / AUD</td>
+            <td>Australian Securities Exchange Ltd, or ASX Limited (ASX), is an Australian public company(ASX: ASX) that operates Australia’s primary securities exchange, the Australian Securities Exchange (sometimes referred to outside of Australia as the Sydney Stock Exchange). It was formed on 1 April 1987, through incorporation under legislation of the Australian Parliament as an amalgamation of the six state securities exchanges, and merged with the Sydney Futures Exchange in 2006.</td>
+          </tr>
+          <tr>
+            <td>Euro 50 Index</td>
+            <td>EUROSTOXX50/ EUR</td>
+            <td>The EURO STOXX 50 is a stock index of Eurozone stocks designed by STOXX, an index provider owned by Deutsche Börse Group. According to STOXX, its goal is “to provide a blue-c</td>
+          </tr>
+          <tr>
+            <td>France 40 Index</td>
+            <td>CAC40/EUR</td>
+            <td>The CAC 40 (French: CAC quarante is a benchmark French stock market index.The index represents a capitalization-weighted measure of the 40 most significant values among the 100 highest market caps on the Euronext Paris</td>
+          </tr>
+          <tr>
+            <td>German 30 Index</td>
+            <td>DAX/EUR</td>
+            <td>The DAX (German stock index) is a blue chip stockmarket index consisting of the 30 major German companies trading on the Frankfurt Stock Exchange</td>
+          </tr>
+          <tr>
+            <td>Japan 225 Index</td>
+            <td>JAPAN 225 / JPY</td>
+            <td>The JPN225’sor Nikkei225 more commonly called the Nikkei, the Nikkei index, or the Nikkei Stock Average. is a stock market index for the Tokyo Stock Exchange (TSE). It has been calculated daily by the Nihon Keizai Shimbun (Nikkei) newspaper since 1950. It is a price-weighted average (the unit is yen), and the components are reviewed once a year. Currently, the Nikkei is the most widely quoted average of Japanese equities, similar to the Dow Jones Industrial Average. In fact, it was known as the “Nikkei Dow Jones Stock Average” from 1975 to 1985.</td>
+          </tr>
+          <!-- Five elements -->
+        </table>
       </div>
       <div id="Stocks" class="tab__content  tab__content--stocks">
         <h3>Stocks</h3>
         <p>Stocks or Equities belong to one of the major asset classes. Stocks are significant as they stand for the real value of one’s stake in a corporation listed in a stock exchange.</p>
         <p>At Forex24 you can trade 84+ Stock CFDs that are traded in world major equity markets, such as Apple, Microsoft, Alibaba and Amazon.</p>
+        <table class="product-specification__table  product-specification__table--stocks">
+          <tr>
+            <th>Symbol</th>
+            <th>Description</th>
+            <th>Explanation</th>
+          </tr>
+          <tr>
+            <td>APPLE</td>
+            <td>UsStocks</td>
+            <td>APPLE Inc.</td>
+          </tr>
+          <tr>
+            <td>ADIDAS</td>
+            <td>EURO Stocks</td>
+            <td>Adidas AG</td>
+          </tr>
+          <tr>
+            <td>AIRBUS</td>
+            <td>EURO Stocks</td>
+            <td>AIRBUS</td>
+          </tr>
+          <tr>
+            <td>ALIBABA</td>
+            <td>UsStocks</td>
+            <td>ALIBABA</td>
+          </tr>
+          <tr>
+            <td>ALLIANZ</td>
+            <td>EURO Stocks</td>
+            <td>Allianz AG</td>
+          </tr>
+          <!-- Five elements -->
+        </table>
       </div>
     </div>
   </section>
