--- a/forex/templates/account-comparison.html
+++ b/forex/templates/account-comparison.html
@@ -68,7 +68,7 @@
         <button class="account-comparison__free" onclick="changeContentFree()" type="button" name="button">Swap Free</button>
       </div>
       <div class="tab">
-        <button class="tab__link  forex" onclick="openTab(event, 'Forex')">Forex</button>
+        <button class="tab__link  forex active" onclick="openTab(event, 'Forex')" autofocus>Forex</button>
         <button class="tab__link  commodities" onclick="openTab(event, 'Commodities')">Commoditiews</button>
         <button class="tab__link  metals" onclick="openTab(event, 'Precious Metals')">Precious Metals</button>
         <button class="tab__link  bonds" onclick="openTab(event, 'Bonds')">Bonds</button>
