--- a/forex/sass/blocks/tabs.scss
+++ b/forex/sass/blocks/tabs.scss
@@ -178,3 +178,24 @@
   }
 }
 
+@media screen and ($tablet-widths) {}
+
+@media screen and ($mobile-widths) {
+  .tab {
+    flex-direction: column;
+    
+    & button {
+      margin-bottom: 5px;
+      border-radius: 0;
+      
+      &.stocks {
+        margin-bottom: 0;
+      }
+    }
+  }
+  
+  table {
+    display: block;
+    overflow-x: auto;  
+  }
+}
