--- a/forex/templates/security.html
+++ b/forex/templates/security.html
@@ -5,8 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Security of Funds - Forex 24</title>
-  <!-- <link rel="stylesheet" href="js/slick/slick.css"/> -->
-  <!-- <link rel="stylesheet" href="js/slick/slick-theme.css"/> -->
   <link rel="stylesheet" href="../css/style.min.css">
 </head>
 <body>
@@ -63,15 +61,12 @@
   </section>
   <section class="security">
     <div class="container">
-      <div class="security__flex">
-        <div class="security__left"></div>
-        <div class="security__right">
-          <p><b>Regulation</b><br>Forex24 Global is the brand name of Lydya Financials Ltd, who is authorised and regulated by the Cyprus Securities and Exchange Commission (CySEC) with licence number 300/16. CySEC is a member of the European Securities and Markets Authority (ESMA), and is the supervisory and regulatory authority for investment firms in Cyprus.</p>
-          <p><b></b></p>
-          <p><b></b></p>
-          <p><b></b></p>
-          <p><b></b></p>
-        </div>
+      <div class="security__box">
+        <p><b>Regulation</b><br>Forex24 Global is the brand name of Lydya Financials Ltd, who is authorised and regulated by the Cyprus Securities and Exchange Commission (CySEC) with licence number 300/16. CySEC is a member of the European Securities and Markets Authority (ESMA), and is the supervisory and regulatory authority for investment firms in Cyprus.</p>
+        <p><b>Segregation of Funds</b><br>As a regulatory requirement, client funds are kept in separate clients’ accounts in top tier EU banks, to be used only for client trading and are totally separate from the company’s own funds. The company only works with regulated payment service providers.</p>
+        <p><b>Negative Balance Protection</b><br>Forex24 Global offers Negative Balance Protection to all of its clients, which is a guarantee a client cannot lose more money than they invested with the company.</p>
+        <p><b>Investor Compensation Fund</b><br>Forex24 Global is a member of the Investor Compensation Fund, which provides covered clients the extra security of receiving compensation from the fund for any claims against the company not fulfilling its obligations. For further details please see our ICF document.</p>
+        <p><b>Funding and Website Securityе</b><br>We use level 1 PCI DSS compliant payment providers that use the highest level of online security when funding your account. We also adopt the SSL (Secure Sockets Layer) network security protocol that keeps your personal online communication and data with us private and secure.</p>
       </div>
     </div>
   </section>
