--- a/forex/css/style.css
+++ b/forex/css/style.css
@@ -2029,3 +2029,73 @@ button[type="submit"] {
   .security__box {
     padding-top: 260px;
     background: url("../img/security.png") no-repeat top; } }
+
+.trading-specification {
+  padding: 50px 0; }
+  .trading-specification .tab__content {
+    padding: 10px; }
+    .trading-specification .tab__content--forex, .trading-specification .tab__content--commodities, .trading-specification .tab__content--metals, .trading-specification .tab__content--bonds, .trading-specification .tab__content--indices-c, .trading-specification .tab__content--indices-f, .trading-specification .tab__content--stocks {
+      background: inherit; }
+
+.trading-specification__table {
+  display: block;
+  width: 100%;
+  color: #fff;
+  text-align: center;
+  border-collapse: collapse;
+  overflow-x: auto; }
+  .trading-specification__table th {
+    padding: 15px;
+    font-size: 14px;
+    border-bottom: 3px solid #fff; }
+  .trading-specification__table tr {
+    font-size: 13px; }
+  .trading-specification__table td {
+    padding: 10px;
+    border-bottom: 1px solid #fff; }
+  .trading-specification__table tr th:first-of-type {
+    border-top-left-radius: 10px; }
+  .trading-specification__table tr th:last-of-type {
+    border-top-right-radius: 10px; }
+
+.trading-specification__table--forex th {
+  background: #2e2963; }
+
+.trading-specification__table--forex tr {
+  background: #4b426d; }
+
+.trading-specification__table--commodities th {
+  background: #cf8800; }
+
+.trading-specification__table--commodities tr {
+  background: #e29706; }
+
+.trading-specification__table--metals th {
+  background: #c7b299; }
+
+.trading-specification__table--metals tr {
+  background: #e2ccb1; }
+
+.trading-specification__table--bonds th {
+  background: #00bff3; }
+
+.trading-specification__table--bonds tr {
+  background: #2bd1ff; }
+
+.trading-specification__table--indices-c th {
+  background: #007ede; }
+
+.trading-specification__table--indices-c tr {
+  background: #0992f9; }
+
+.trading-specification__table--indices-f th {
+  background: #130085; }
+
+.trading-specification__table--indices-f tr {
+  background: #2e13d3; }
+
+.trading-specification__table--stocks th {
+  background: #1cbbb4; }
+
+.trading-specification__table--stocks tr {
+  background: #24e5dd; }
