--- a/forex/templates/platforms.html
+++ b/forex/templates/platforms.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>About Us - Forex 24</title>
+  <title>Platforms - Forex 24</title>
   <link rel="stylesheet" href="../css/style.min.css">
 </head>
 <body>
@@ -32,10 +32,17 @@
       </div>
     </nav>
   </header>
-  <section class="sub-menu">
+  <section class="sub-menu  sub-menu--forex">
     <div class="container">
-      <div class="sub-menu__flex">
-        <p>About Us</p>
+      <div class="sub-menu__flex  sub-menu__flex--platform">
+        <div class="sub-menu__platform-column">
+          <p>Platforms</p>
+          <div class="sub-menu__platform">
+            <a href="#">Desktop</a>
+            <a href="#">Mobile</a>
+            <a href="#">Webtrader</a>
+          </div>
+        </div>
         <div class="sub-menu__box  sub-menu__box--about">
           <a class="sub-menu__logo" href="../index.html">
             <img src="../img/logo-menu.png" alt="Forex24">
@@ -59,17 +66,82 @@
       </div>
     </div>
   </section>
-  <section class="about">
+  <section class="platforms">
     <div class="container">
-      <h1>An Introduction to Excellence<br>Forex 24 Global – Your Gateway to Financial Markets</h1>      
-      <p>The makers of Forex24 Global are all field experts with many years of experience behind their backs. A Forex outlet made to meet the expectations of even the pickiest traders. It enables you to trade with a wide portfolio of diverse assets on markets all around the globe, all the while providing great features and superb support for its customers. We always place our users first. That is why we strive for perfection and look for ways to make trading better, even in the smallest of details. Forex24 Global is here to be your trading partner at all times.</p>
-      <b>Striving for greatness</b>
-      <p>Forex24 Global takes all the factors needed for succeeding in the trading field and puts them together to bring you the optimum platform – functional, feature packed, easy to use, secure and reliable. We are constantly working and improving while staying on top of the latest developments in the field. Increasing the number of tradable assets and improving user experience are just some of the things we constantly work on.</p>
-      <b>User Support</b>
-      <p>We are always there to address any issues our customers might experience regarding the platform or trading in general. We want to ensure that your trading experience is as swift and pleasant as it can be, giving you all you need in order to focus 100% on your trades. All the processes and functions of the platform have been designed to be as convenient as possible. Please let us know if you`re experiencing any issues or inconveniences and we`ll do everything we can to fix it. Forex24 Global has your back.</p>
-      <b>Being profitable</b>
-      <p class="about__pb">Naturally, the aim of Forex trading is to earn more money than you`ve invested. Therefore at Forex24 Global , one of our main goals is to empower you to fulfil this goals. Everything you need in order to make it is here, the rest is up to you. All the features of the website have been specially designed to aid our users. Our passion towards our customers is our main drive and what leads us forward. Trading involves risks of loss, for further information please read our Risk Disclosure.</p>
+      <section class="platforms__trading">
+        <img src="../img/platforms-monitor.png" alt="">
+        <div class="platforms__meta">
+          <h2>Trading Platforms</h2>
+          <p>Forex24 pioneered the offering of an MT4 platform with trading execution quality in mind.</p>
+          <p>Trade on MT4 with No Requotes, No Rejections with flexible leverage ranging from 1:1 – to 400:1</p>
+          <img src="../img/platforms-meta.png" alt="">
+          <p>Download the industry’s favorite forex trading platform on your PC, tablet or mobile and enjoy:</p>
+        </div>
+      </section>
+      <section class="platforms__features">
+        <h3>Forex24 MT4 Features</h3>
+        <div class="platforms__flex">
+          <div class="platforms__list">
+            <ul>
+              <li>Spreads as low as 0.3 pips</li>
+              <li>Pioneering Automated Trading system – Expert Advisors</li>
+              <li>1 Click Trading</li>
+              <li>Technical Analysis Tools with 50 indicators and charting tools</li>
+              <li>Hedging allowed</li>
+            </ul>
+            <ul>
+              <li>VPS Functionality</li>
+              <li>Multilingual Platform</li>
+              <li>News feeds directly into the trading platform</li>
+              <li>Trailing stop loss <facility></facility></li>
+            </ul>
+          </div>
+          <div class="platforms__download">
+            <div class="platforms__box">
+              <p><b>MT4 for PC</b><br><a href="#">Read more</a></p>
+              <a class="platforms__start" href="#">Download</a>
+            </div>
+            <div class="platforms__box">
+              <p><b>MT4 for PC</b><br><a href="#">Read more</a></p>
+              <a class="platforms__start" href="#">Lounch</a>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="platforms__trader">
+        <h3>Webtrader</h3>
+        <b>Smart features</b>
+        <div class="platforms__flex  platforms__list  platforms__flex--trader ">
+          <ul>
+            <li>Filter instruments by keywords or securities group, or define your own asset classes.</li>
+            <li>With smart one-click trading mode, traders can: set size, Take Profit/Stop Loss and open orders with unparalleled speed.</li>
+            <li>Mark an instrument as a ‘Favorite’ by clicking on the star; view them easily by selecting Favorite instruments group.</li>
+            <li>Advanced HTML5 charting includes: vector drawings, five chart types and 100 plus studies.</li>
+          </ul>
+          <ul>
+            <li>Open and close trades directly from the chart.</li>
+            <li>Chart Dock enables traders to analyse up to 10 charts simultaneously. Charts can be manually arranged or auto-arranged at the touch of a button.</li>
+            <li>With enhanced ‘Close All’ control, traders can close all profitable, losing, buy, sell and open positions with just one click.</li>
+            <li>Summary tab groups open positions by symbol and displays total pips and Profit and Loss. Account transactions are separated from Order History for more convenient viewing.</li>
+          </ul>
+        </div>
+      </section>
+      <section class="platforms__adv">
+        <h3>Advantages</h3>
+        <ul>
+          <li>Works in any browser – No Downloads, Flash or Java required</li>
+          <li>Trade directly from the chart</li>
+          <li>View aggregated positions</li>
+          <li>Advanced ‘Close All’ functionality</li>
+          <li>Statistics panel tracks balance, Profit and Loss, drawdown percentage and more</li>
+        </ul>
+      </section>
     </div>
+    <section class="platforms__desktop">
+      <div class="container">
+        
+      </div>
+    </section>
   </section>
   <section class="payment  payment--temp">
     <div class="payment__box"></div>
